--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,16 @@
 @charset "UTF-8";
 
-header {
-	height: 100px;
-}
-.contents {
-	height: 600px;
-}
+a { text-decoration: none; color:#000;}
+a:hover { text-decoration:none; color: #000; }
+
+/* layout */
+.header {height:80px;}
+
+.sign-up-box {width:650px; background-color:#F4FCFD; margin-top:20px; box-shadow:5px 5px 5px 5px #BDC0C0;}
+.sign-up-subject {margin:20px; font-weight:bold;}
+
+.shadow-box {width:550px; background-color:#F4FCFD; margin-top:20px; box-shadow:5px 5px 5px 5px #BDC0C0;}
+.login-box {width:400px;}
+
+.contents-box {width:650px;}
+#writeTextArea {height:100px;}
