이스타그램 팔로우 항목 추가중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,4 +42,12 @@ a:hover { text-decoration:none; color: #000; }
   bottom: 24px;
   left: 70px;
 }
-
+.replyBox {
+	background-color: #ededed;
+}
+.userNameBox {
+	background-color: #ededed;
+}
+.more-btn {
+	background-color: #ededed;
+}
